--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container-fluid sticky-top bg-dark bg-light-radial shadow-sm px-5 pe-lg-0">
         <nav class="navbar navbar-expand-lg bg-dark bg-light-radial navbar-dark py-3 py-lg-0">
             <a href="index.html" class="navbar-brand">
-               <img src="imgs/webuild.png" style="height: 95px;">
+               <img src="webuild.png" style="height: 95px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -66,7 +66,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="imgs/builds1.jpg" alt="Image">
+                    <img class="w-100" src="builds1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h1 class="display-2 text-uppercase text-danger mb-md-4">Building the future, today, with dedication and expertise.</h1>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src= "imgs/building.png" alt="Image">
+                    <img class="w-100" src= "building.png" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h1 class="display-2 text-uppercase text-danger mb-md-4">Building with precision and passion.
@@ -123,7 +123,7 @@
             </div>
             <div class="col-lg-5 pb-5" style="min-height: 400px;">
                 <div class="position-relative bg-dark-radial h-100 ms-5">
-                    <img class="position-absolute w-100 h-100 mt-5 ms-n5" src="imgs/builds2.png" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 mt-5 ms-n5" src="builds2.png" style="object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds3.avif" alt="">
+                    <img class="img-fluid" src="builds3.avif" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -151,7 +151,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds6.jpg" alt="">
+                    <img class="img-fluid" src="builds6.jpg" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -163,7 +163,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds5.jpg" alt="">
+                    <img class="img-fluid" src="builds5.jpg" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -175,7 +175,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds7.jpg" alt="">
+                    <img class="img-fluid" src="builds7.jpg" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -187,7 +187,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds4.jpg" alt="">
+                    <img class="img-fluid" src="builds4.jpg" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -199,7 +199,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds22.png" alt="">
+                    <img class="img-fluid" src="builds22.png" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -281,13 +281,13 @@
                 <div class="d-inline-block bg-dark-radial text-center pt-4 px-5 mb-5">
                     <ul class="list-inline mb-0" id="portfolio-flters">
                         <li class="btn btn-outline-primary bg-white p-2 active mx-2 mb-4" data-filter="*">
-                            <img src="imgs/builds9.png" style="width: 150px; height: 100px;">
+                            <img src="builds9.png" style="width: 150px; height: 100px;">
                             <div class="position-absolute top-0 start-0 end-0 bottom-0 m-2 d-flex align-items-center justify-content-center" style="background: rgba(4, 15, 40, .3);">
                                 <h6 class="text-white text-uppercase m-0">All</h6>
                             </div>
                         </li>
                         <li class="btn btn-outline-primary bg-white p-2 mx-2 mb-4" data-filter=".first">
-                            <img src="imgs/builds11.png" style="width: 150px; height: 100px;">
+                            <img src="builds11.png" style="width: 150px; height: 100px;">
                             <div class="position-absolute top-0 start-0 end-0 bottom-0 m-2 d-flex align-items-center justify-content-center" style="background: rgba(4, 15, 40, .3);">
                                 <h6 class="text-white text-uppercase m-0">Construction</h6>
                             </div>
@@ -305,72 +305,72 @@
         <div class="row g-5 portfolio-container">
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first">
                 <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="imgs/builds25.png" alt="">
+                    <img class="img-fluid w-100" src="builds25.png" alt="">
                     <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">TechHub Tower</p>
                         <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Bangalore,HSR layout , India</span>
                     </a>
-                    <a class="portfolio-btn" href="imgs/builds13.avif" data-lightbox="portfolio">
+                    <a class="portfolio-btn" href="builds13.avif" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
                     </a>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
                 <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="imgs/builds11.png" alt="">
+                    <img class="img-fluid w-100" src="builds11.png" alt="">
                     <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Urban Nexus</p>
                         <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Telangana, Hyderabad, India</span>
                     </a>
-                    <a class="portfolio-btn" href="imgs/builds11.png" data-lightbox="portfolio">
+                    <a class="portfolio-btn" href="builds11.png" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
                     </a>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first">
                 <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="imgs/builds10.png" alt="">
+                    <img class="img-fluid w-100" src="builds10.png" alt="">
                     <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Skyrise Plaza</p>
                         <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Andhra pradesh, Vijayawada,India</span>
                     </a>
-                    <a class="portfolio-btn" href="imgs/builds10.png" data-lightbox="portfolio">
+                    <a class="portfolio-btn" href="builds10.png" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
                     </a>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
                 <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="imgs/builds12.png" alt="">
+                    <img class="img-fluid w-100" src="builds12.png" alt="">
                     <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Harbor View</p>
                         <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Bangalore,Whitefiled ,India</span>
                     </a>
-                    <a class="portfolio-btn" href="imgs/builds12.png" data-lightbox="portfolio">
+                    <a class="portfolio-btn" href="builds12.png" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
                     </a>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first">
                 <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="imgs/builds9.png" alt="">
+                    <img class="img-fluid w-100" src="builds9.png" alt="">
                     <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">InnoPark Campus</p>
                         <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Tamilnaidu, Chennai, India</span>
                     </a>
-                    <a class="portfolio-btn" href="imgs/builds9.png" data-lightbox="portfolio">
+                    <a class="portfolio-btn" href="builds9.png" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
                     </a>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
                 <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="imgs/builds23.png" alt="">
+                    <img class="img-fluid w-100" src="builds23.png" alt="">
                     <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">GreenEdge Homes</p>
                         <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Mumbai, Colaba, India</span>
                     </a>
-                    <a class="portfolio-btn" href="imgs/builds23.png" data-lightbox="portfolio">
+                    <a class="portfolio-btn" href="builds23.png" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
                     </a>
                 </div>
@@ -391,14 +391,14 @@
         </div>
         <div class="row gx-0 align-items-center">
             <div class="col-xl-4 col-lg-5 d-none d-lg-block">
-                <img class="img-fluid w-100 h-100" src="imgs/buildsss.png">
+                <img class="img-fluid w-100 h-100" src="buildsss.png">
             </div>
             <div class="col-xl-8 col-lg-7 col-md-12">
                 <div class="testimonial bg-light">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="row gx-4 align-items-center">
                             <div class="col-xl-4 col-lg-5 col-md-5">
-                                <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="imgs/builds27.png" alt="">
+                                <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="builds27.png" alt="">
                             </div>
                             <div class="col-xl-8 col-lg-7 col-md-7">
                                 <h4 class="text-uppercase mb-0">James Anderson</h4>
@@ -408,7 +408,7 @@
                         </div>
                         <div class="row gx-4 align-items-center">
                             <div class="col-xl-4 col-lg-5 col-md-5">
-                                <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="imgs/builds26.png" alt="">
+                                <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="builds26.png" alt="">
                             </div>
                             <div class="col-xl-8 col-lg-7 col-md-7">
                                 <h4 class="text-uppercase mb-0">Emily Johnson</h4>
@@ -432,11 +432,11 @@
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <div class="bg-light">
-                    <img class="img-fluid" src="imgs/blog-1.jpg" alt="">
+                    <img class="img-fluid" src="blog-1.jpg" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-2" src="imgs/user1.jpg" width="35" height="35" alt="">
+                                <img class="rounded-circle me-2" src="user1.jpg" width="35" height="35" alt="">
                                 <span>John Doe</span>
                             </div>
                             <div class="d-flex align-items-center">
@@ -450,11 +450,11 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-light">
-                    <img class="img-fluid" src="imgs/blog-2.jpg" alt="">
+                    <img class="img-fluid" src="blog-2.jpg" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-2" src="imgs/user1.jpg" width="35" height="35" alt="">
+                                <img class="rounded-circle me-2" src="user1.jpg" width="35" height="35" alt="">
                                 <span>John Doe</span>
                             </div>
                             <div class="d-flex align-items-center">
@@ -469,11 +469,11 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-light">
-                    <img class="img-fluid" src="imgs/blog-3.jpg" alt="">
+                    <img class="img-fluid" src="blog-3.jpg" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-2" src="imgs/user1.jpg" width="35" height="35" alt="">
+                                <img class="rounded-circle me-2" src="user1.jpg" width="35" height="35" alt="">
                                 <span>John Doe</span>
                             </div>
                             <div class="d-flex align-items-center">
