--- a/service.html
+++ b/service.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>Build-outs</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    
 
     <!-- Favicon -->
     <link href="webuild.png" rel="icon">
@@ -351,14 +350,14 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
+    <script src="easing/easing.min.js"></script>
+    <script src="waypoints/waypoints.min.js"></script>
+    <script src="owlcarousel/owl.carousel.min.js"></script>
+    <script src="tempusdominus/js/moment.min.js"></script>
+    <script src="tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="isotope/isotope.pkgd.min.js"></script>
+    <script src="lightbox/js/lightbox.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
