--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="owl.carousel.min.css" rel="stylesheet">
+    <link href="tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="lightbox.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -257,14 +257,14 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="easing/easing.min.js"></script>
-    <script src="waypoints/waypoints.min.js"></script>
-    <script src="owlcarousel/owl.carousel.min.js"></script>
-    <script src="tempusdominus/js/moment.min.js"></script>
-    <script src="tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-    <script src="isotope/isotope.pkgd.min.js"></script>
-    <script src="lightbox/js/lightbox.min.js"></script>
+    <script src="easing.min.js"></script>
+    <script src="waypoints.min.js"></script>
+    <script src="owl.carousel.min.js"></script>
+    <script src="js/moment.min.js"></script>
+    <script src="js/moment-timezone.min.js"></script>
+    <script src="js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="isotope.pkgd.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
