--- a/about.html
+++ b/about.html
@@ -260,11 +260,11 @@
     <script src="easing.min.js"></script>
     <script src="waypoints.min.js"></script>
     <script src="owl.carousel.min.js"></script>
-    <script src="js/moment.min.js"></script>
-    <script src="js/moment-timezone.min.js"></script>
-    <script src="js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="moment.min.js"></script>
+    <script src="moment-timezone.min.js"></script>
+    <script src="tempusdominus-bootstrap-4.min.js"></script>
     <script src="isotope.pkgd.min.js"></script>
-    <script src="js/lightbox.min.js"></script>
+    <script src="lightbox.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
