--- a/service.html
+++ b/service.html
@@ -70,7 +70,7 @@
     <div class="container-fluid sticky-top bg-dark bg-light-radial shadow-sm px-5 pe-lg-0">
         <nav class="navbar navbar-expand-lg bg-dark bg-light-radial navbar-dark py-3 py-lg-0">
             <a href="index.html" class="navbar-brand">
-                                   <img src="imgs/webuild.png" style="height: 95px;">
+                                   <img src="webuild.png" style="height: 95px;">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -113,7 +113,7 @@
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds3.avif"" alt="">
+                    <img class="img-fluid" src="builds3.avif"" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -125,7 +125,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds6.jpg" alt="">
+                    <img class="img-fluid" src="builds6.jpg" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -137,7 +137,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds5.jpg" alt="">
+                    <img class="img-fluid" src="builds5.jpg" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -149,7 +149,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds7.jpg" alt="">
+                    <img class="img-fluid" src="builds7.jpg" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -161,7 +161,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds4.jpg" alt="">
+                    <img class="img-fluid" src="builds4.jpg" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -173,7 +173,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="imgs/builds22.png" alt="">
+                    <img class="img-fluid" src="builds22.png" alt="">
                     <div class="service-icon bg-white">
                     </div>
                     <div class="px-4 pb-4">
@@ -244,14 +244,14 @@
         </div>
         <div class="row gx-0 align-items-center">
             <div class="col-xl-4 col-lg-5 d-none d-lg-block">
-                <img class="img-fluid w-100 h-100" src="imgs/buildsss.png">
+                <img class="img-fluid w-100 h-100" src="buildsss.png">
             </div>
             <div class="col-xl-8 col-lg-7 col-md-12">
                 <div class="testimonial bg-light">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="row gx-4 align-items-center">
                             <div class="col-xl-4 col-lg-5 col-md-5">
-                                <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="imgs/builds27.png" alt="">
+                                <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="builds27.png" alt="">
                             </div>
                             <div class="col-xl-8 col-lg-7 col-md-7">
                                 <h4 class="text-uppercase mb-0">James Anderson</h4>
@@ -261,7 +261,7 @@
                         </div>
                         <div class="row gx-4 align-items-center">
                             <div class="col-xl-4 col-lg-5 col-md-5">
-                                <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="imgs/builds26.png" alt="">
+                                <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="builds26.png" alt="">
                             </div>
                             <div class="col-xl-8 col-lg-7 col-md-7">
                                 <h4 class="text-uppercase mb-0">Emily Johnson</h4>
